# crm-api-automation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
allure-results/: 13285f5d-0cd3-414c-883b-191b04bba9d4-container.json  1a211045-081c-4ba9-a6e8-61fe1e255a03-result.json  29c6c8d9-b73d-4eb7-bc2f-9395e85552d1-container.json  3e57f4d4-e9ad-44f4-9f1b-c747f2e2e509-container.json  404337ef-e958-43f2-bf31-e39dfe7d7fe7-container.json  4581bc13-c8cb-406f-b85e-12d0700ccaa8-container.json  463ef9ee-4132-4b02-9292-561512b6f890-container.json  5b68ea03-405d-46b2-baad-bd1bea0de87f-container.json  6efc0e83-8058-4125-aad3-eee32133fdae-attachment.txt  7a7941d1-f727-44ca-915b-2d8256f03fc8-result.json  9a85d949-62d2-4aa7-8370-f06ceba9870b-container.json  9de92af3-ac4b-42cc-aa7a-d184dc6d5cd2-container.json  ae9f11c6-fe0d-41ce-85cc-71a4d35f8674-container.json  b12b5f16-24e6-4d74-9d03-9791212c950a-container.json  b3d90def-06a7-4d44-a3d4-f923bea1a04a-container.json  b6d9b2df-5b2d-4b7f-94b7-5df24fdf7754-container.json  c9a69532-acba-4e81-931c-c0e9d4047867-container.json  cd9ceda4-1783-456c-a737-e431b8d9725c-container.json  d03c26bf-ce38-4892-95ca-5fd841960cc3-attachment.txt  e363ae2f-5360-42f1-a977-fdf87d07032c-container.json
data/: customer_data.json
src/crm_api/api/: auth_api.py  customer_api.py
src/crm_api/config/: settings.py
src/crm_api/core/: exceptions.py  http_client.py  logger.py
src/crm_api_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_customer.py
